--- a/.tox/.package/Pipfile
+++ b/.tox/.package/Pipfile
@@ -7,10 +7,10 @@ name = "pypi"
 
 [dev-packages]
 pytest = "*"
-setuptools = ">=35.0.2"
-setuptools_scm = ">=2.0.0"
 tox = "*"
 tox-pipenv = "*"
+setuptools = ">=35.0.2"
+setuptools-scm = ">=2.0.0,<3"
 
 [requires]
 python_version = "3.10"
