--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,16 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py37,py38,py39
-isolated_build = True
+envlist = python3.8,python3.9,py310
 
 [testenv]
-description = Run tests for Python 3.7
+description = Run tests for Python
+whitelist_externals = {homedir}/.local/share/virtualenvs/python_js-*
 deps =
-    pytest
+  pydocstyle
+  pycodestyle
+  pytest
 commands =
-    python -m pytest tests/
+  - pydocstyle --ignore=D100,104,D203,D212 lib 
+  - pycodestyle lib 
+    python -m pytest tests
