--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,6 @@ deps =
   pycodestyle
   pytest
 commands =
-  - pydocstyle --ignore=D100,104,D203,D212 lib 
-  - pycodestyle lib 
+  - pydocstyle --ignore=D100,104,D203,D212 python_js 
+  - pycodestyle python_js 
     python -m pytest tests
