--- a/tox.ini
+++ b/tox.ini
@@ -4,16 +4,24 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = python3.8,python3.9,py310
+envlist = python3.{8,9},py310
+  style
+  typing
 
 [testenv]
 description = Run tests for Python
 whitelist_externals = {homedir}/.local/share/virtualenvs/python_js-*
+deps = pytest
+commands = python -m pytest tests
+
+[testenv:style]
 deps =
   pydocstyle
   pycodestyle
-  pytest
 commands =
-  - pydocstyle --ignore=D100,104,D203,D212 python_js 
+  - pydocstyle --ignore=D100,D104,D203,D212 python_js 
   - pycodestyle python_js 
-    python -m pytest tests
+
+[testenv:typing]
+deps = mypy
+commands = mypy python_js
